# sailup

./: ACTION_README.md  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  action.yml
.github/: constants.env
.github/workflows/: ci.yml
apps/: CMakeLists.txt  main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/sailup/: sailup.hpp  sample_library.hpp
src/: CMakeLists.txt  lib.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
